--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/personalize.css" rel="stylesheet" type="text/css" />
-    <link href="http://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
      <title>Pawanraj Sadhwani </title>
@@ -119,19 +119,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>Growing up.</strong></h2>
+                <h2>Featured - <strong>I Want to Talk to You...</strong></h2>
             </header>
-            <p>It&#39;s been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so that w</p>
+            <p>I want to talk to you. But I can&#39;t. I can&#39;t. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - o</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/growing-up" class="button">Read More</a></li>
+                    <li><a href="/posts/i-want-to-talk-to-you" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-smile-o"><span class="label">Growing up.</span></span>
+                <li><span class="icon fa-pencil"><span class="label">I Want to Talk to You...</span></span>
                 </li>
             </ul>
         </div>
