--- a/index5.html
+++ b/index5.html
@@ -50,7 +50,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/personalize.css" rel="stylesheet" type="text/css" />
-    <link href="http://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
      <title>Pawanraj Sadhwani </title>
@@ -119,19 +119,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>So it begins...</strong></h2>
+                <h2>Featured - <strong>Oooh Shiny!</strong></h2>
             </header>
-            <p>&#34;So...&#34; &#34;So.&#34; &#34;You started this on 16th December. It is now 21st December...&#34; &#34;Yes, and?&#34; &#34;Nothing. Just pointing it out.&#34; &#34;Yes, thanks. I am aware that I&#39;ve bee</p>
+            <p>&#34;Hello again.&#34; &#34;Hello to you, too!&#34; &#34;What&#39;s on your mind today?&#34; &#34;On my mind? Nothing. That&#39;s kinda the weird thing - I think I am losing my ability to think.&#34; &#34;You thin</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/so-it-begins" class="button">Read More</a></li>
+                    <li><a href="/posts/oooh-shiny" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-comments"><span class="label">So it begins...</span></span>
+                <li><span class="icon fa-comments"><span class="label">Oooh Shiny!</span></span>
                 </li>
             </ul>
         </div>
