Updated site after removing submodule

--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>Jump!</strong></h2>
+                <h2>Featured - <strong>The Power of Stories...</strong></h2>
             </header>
-            <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I&#39;m the ant who is caught under His magnifying glass. The idea of a</p>
+            <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the &#34;religious stu</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/jump" class="button">Read More</a></li>
+                    <li><a href="/posts/the-power-of-stories" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-smile-o"><span class="label">Jump!</span></span>
+                <li><span class="icon fa-book"><span class="label">The Power of Stories...</span></span>
                 </li>
             </ul>
         </div>
