--- a/index2.html
+++ b/index2.html
@@ -119,19 +119,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>Oooh Shiny!</strong></h2>
+                <h2>Featured - <strong>We all Need the Eggs...</strong></h2>
             </header>
-            <p>&#34;Hello again.&#34; &#34;Hello to you, too!&#34; &#34;What&#39;s on your mind today?&#34; &#34;On my mind? Nothing. That&#39;s kinda the weird thing - I think I am losing my ability to think.&#34; &#34;You thin</p>
+            <p>My parents have been here for the last couple of weeks. It&#39;s nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging. The</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/oooh-shiny" class="button">Read More</a></li>
+                    <li><a href="/posts/we-all-need-the-eggs" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-comments"><span class="label">Oooh Shiny!</span></span>
+                <li><span class="icon fa-smile-o"><span class="label">We all Need the Eggs...</span></span>
                 </li>
             </ul>
         </div>
