--- a/index3.html
+++ b/index3.html
@@ -14,10 +14,8 @@
         </header>
 
         <p>
-            I consult businesses on technology strategy.<br> I also run half marathons and cheer Manchester United. <br> I sometimes write about technology, life or nothing at all.<br> After conversations with myself, I've decided I should write more.
-            <br>
+            <a href="/docs/pgs_resume.pdf">Tech consultant</a>. <a href="#latest_posts">Scribbles ocassionally</a>.
         </p>
-        <p>So watch this space!</p>
 
         <!--
         <footer>
@@ -105,11 +103,11 @@
         <h2><strong>Pawanraj Sadhwani</strong></h2>
 
         <p>
-            I <strong><a href="#">consult</a></strong> businesses on technology strategy.<br /> I also run half marathons and cheer Manchester United. <br /> I sometimes write about
+            I <strong><a href="/docs/pgs_resume.pdf">consult</a></strong> businesses on technology strategy.<br /> I also run half marathons and cheer Manchester United. <br /> I sometimes write about
             <a href="/category/technology">technology</a>,
             <a href="/category/personal">my life</a> or
-            <a href="/category/scribbles">nothing at all.</a><br /> After
-            <a href="/category/conversations-with-myself">conversations with myself</a>, I've decided I should write more.<br /> So watch this space!
+            <a href="/category/scribbles">nothing at all.</a><br />
+            <a href="/category/conversations-with-myself">My subconscious talked me </a>into creating this site and writing more.<br />
         </p>
     </header>
 
@@ -119,26 +117,26 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>I Want to Talk to You...</strong></h2>
+                <h2>Featured - <strong>This way and That...</strong></h2>
             </header>
-            <p>I want to talk to you. But I can&#39;t. I can&#39;t. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - o</p>
+            <p>So, imagine this. You&#39;re walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direc</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/i-want-to-talk-to-you" class="button">Read More</a></li>
+                    <li><a href="/posts/this-way-and-that" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-pencil"><span class="label">I Want to Talk to You...</span></span>
+                <li><span class="icon fa-arrows-h"><span class="label">This way and That...</span></span>
                 </li>
             </ul>
         </div>
     </div>
 </section>    <!-- Two -->
     <section class="wrapper style1 container special">
-        <div class="row">
+        <div class="row" id="latest_posts">
 
             <div class="12u">
                 <h2>Latest Posts</h2>
