fix mobile-style banner

--- a/index3.html
+++ b/index3.html
@@ -117,19 +117,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>This way and That...</strong></h2>
+                <h2>Featured - <strong>Oooh Shiny!</strong></h2>
             </header>
-            <p>So, imagine this. You&#39;re walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direc</p>
+            <p>&#34;Hello again.&#34; &#34;Hello to you, too!&#34; &#34;What&#39;s on your mind today?&#34; &#34;On my mind? Nothing. That&#39;s kinda the weird thing - I think I am losing my ability to think.&#34; &#34;You thin</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/this-way-and-that" class="button">Read More</a></li>
+                    <li><a href="/posts/oooh-shiny" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-arrows-h"><span class="label">This way and That...</span></span>
+                <li><span class="icon fa-comments"><span class="label">Oooh Shiny!</span></span>
                 </li>
             </ul>
         </div>
